--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -2,6 +2,7 @@
 
 /**
  * 公共样式
+ * http://compass-style.org/
  */
 
 // 变量
@@ -79,19 +80,37 @@ main:nth-of-type(2n) {
  */
 header {
   width: 100%;
-  height: 88px;
   background-color:   rgba(23, 23, 23, 0);
   position: fixed;
 
   nav {
-    width: 1140px;
     // width: 90%;
-    margin: 0 auto;
     // border: 1px solid red;
 
-    .nav_log {
-      // box-sizing: border-box;
-      //padding: 19px 0;
+    .phone {
+      width: 40px;
+      float: right;
+      display: none;
+      padding: {
+        top: 14px;
+      }
+      cursor: pointer;
+
+      span {
+        float: left;
+        margin: 4px 0;
+        display: inline-block;
+        width: 40px;
+        height: 3px;
+        background-color: nth($color, 1);
+      }
+
+      span:last-of-type {
+        width: 30px;
+        margin: {
+          left: 10px;
+        }
+      }
     }
 
     .nav_log li:first-of-type {
@@ -113,35 +132,21 @@ header {
         weight: bold;
       }
       position: absolute;
-      left: 3.8px;
-      top: -6px;
     }
 
     .nav_log li:last-of-type {
-      padding: 28px 0 0 8px;
       color: nth($color, 2);
-      letter-spacing: 2px;
-      font: {
-        size: 24px;
-        weight: 550;
-      }
     }
 
     ul li {
-      //line-height: 88px;
-      padding: {
-        top: 34px;
-      }
       float: left;
+      // border: 1px solid red;
     }
 
     .nav_r li {
       letter-spacing: 2px;
       display: inline-block;
       text-align: center;
-      padding: {
-        left: 26px;
-      }
 
       a {
         color: nth($color, 2);
