--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -33,11 +33,28 @@ $font:16px; // html设置字体大小
       }
 }
 
+/**
+ * box-shadow  参数不确定
+ */
+@mixin shadow(){
+  box-shadow: 0 8px 17px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
+
+/**
+ * box-size
+ */
+@mixin box($size:border-box) {
+  box-sizing:border-box;
+  -moz-box-sizing:border-box;
+  -webkit-box-sizing:border-box;
+}
+
 html,body {
   font-size: $font;
   width: 100%;
   height: 100%;
 }
+
 
 /**
  * 引入字体图标
@@ -65,15 +82,15 @@ html,body {
  * 测试部分
  */
 
-main{
-  width: 100%;
-  height: 900px;
-  background-color: nth($color,3);
-}
+// main{
+//   width: 100%;
+//   height: 900px;
+//   background-color: nth($color,3);
+// }
 
-main:nth-of-type(2n) {
-  background-color: nth($color,1);
-}
+// main:nth-of-type(2n) {
+//   background-color: nth($color,1);
+// }
 
 /**
  * 导航栏
@@ -82,6 +99,7 @@ header {
   width: 100%;
   background-color:   rgba(23, 23, 23, 0);
   position: fixed;
+  z-index: 1000;
 
   nav {
     // width: 90%;
@@ -376,3 +394,93 @@ header {
 .icon_top:hover {
   cursor: pointer;
 }
+
+/**
+ * 常用样式
+ */
+
+.center {
+  @include box();
+}
+
+/**
+ * 个人名片
+ */
+#home {
+  width: 100%;
+  overflow: hidden;
+
+  div {
+    background: rgba(0,0,0,.5);
+    color: nth($color, 2);
+
+    ul:first-of-type {
+      @include box();
+
+      dl:first-of-type {
+        dt {
+          font: {
+            size: 18px;
+            weight: 550;
+          }
+
+          background-color: nth($color, 1);
+          height: 40px;
+          line-height: 40px;
+          width: 90px;
+          text-align: center;
+          position: relative;
+
+          @include shadow();
+        }
+
+        dt::after {
+          content: "";
+          position: absolute;
+
+          border: {
+            width: 14px 11px 0 12px;
+            color: nth($color, 1) transparent transparent transparent;
+            style: solid;
+          }
+          bottom: -9px;
+          left: 12px;
+        }
+
+        dd {
+          color: nth($color, 4);
+          padding-top: 10px;
+        }
+      }
+
+      span {
+        display: inline-block;
+        width: 100%;
+        height: 1px;
+        background-color: nth($color, 4);
+      }
+
+      dl:last-of-type {
+        padding-top: 10px;
+
+        dd {
+
+          strong {
+            display: inline-block;
+
+            letter-spacing: 2px;
+          }
+
+          em a {
+            color: nth($color, 2);
+          }
+
+          em a:hover {
+            color: nth($color, 1);
+          }
+        }
+      }
+    }
+  }
+}
+
