--- a/src/styles/phone.scss
+++ b/src/styles/phone.scss
@@ -98,3 +98,71 @@ header {
   }
 }
 
+/**
+ * 常用样式
+ */
+.center {
+  width: 96%;
+  margin: 0 auto;
+  padding: 20px;
+  // border: 1px solid red;
+}
+
+/**
+ * 个人名片
+ */
+#home {
+  padding: {
+    top: 80px;
+    bottom: 10px;
+  }
+
+  background: {
+    image: url(../images/mobile/bigbg.png);
+    repeat: no-repeat;
+    size: 100% 100%;
+  }
+
+  div {
+
+    ul:first-of-type {
+      width: 100%;
+      // padding-right: 20px;
+
+      dl:last-of-type {
+        padding-top: 10px;
+
+        dd {
+          line-height: 40px;
+
+          strong {
+            display: inline-block;
+            width: 100px;
+
+            font: {
+              weight: bold;
+              size: 16px;
+            }
+          }
+        }
+      }
+    }
+
+    ul:last-of-type {
+      // background-color: red;
+      width: 100%;
+
+      li {
+        width: 100%;
+        height: 400px;
+        background: {
+          image: url(../images/mobile/me.png);
+          size: 100% 100%;
+          repeat: no-repeat;
+          position: center;
+        }
+
+      }
+    }
+  }
+}
