--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -82,15 +82,11 @@ html,body {
  * 测试部分
  */
 
-// main{
-//   width: 100%;
-//   height: 900px;
-//   background-color: nth($color,3);
-// }
-
-// main:nth-of-type(2n) {
-//   background-color: nth($color,1);
-// }
+#skill, #exp, #works, #project, #contact{
+  width: 100%;
+  height: 900px;
+  background-color: nth($color,3);
+}
 
 /**
  * 导航栏
@@ -484,3 +480,80 @@ header {
   }
 }
 
+/**
+ * 关于
+ */
+
+#about {
+  width: 100%;
+  .about_l {
+
+    background: {
+      size: 100% 100%;
+      repeat: no-repeat;
+      // position: 0 0;
+    }
+  }
+
+  .about_r { // 自我介绍
+    background-color: nth($color, 6);
+    position: relative;
+    overflow: hidden;
+    @include box();
+
+    ul:first-of-type {
+      position: absolute;
+      left: 0;
+      top: 0;
+
+      li {
+        @include box();
+        float: left;
+
+        dl:first-of-type {
+          dt {
+            color: nth($color, 3);
+          }
+
+          dd {
+            @include box();
+            color: nth($color, 5);
+          }
+        }
+
+        dl:last-of-type {
+          color: nth($color, 1);
+
+          span {
+            display: inline-block;
+            border: {
+              width: 2px;
+              style: solid;
+              color: nth($color, 1);
+            }
+            cursor: pointer;
+          }
+
+          span:hover {
+            color: nth($color, 2);
+            background-color: nth($color, 1);
+          }
+        }
+      }
+    }
+
+    ul:last-of-type {
+      position: absolute;
+
+      li {
+        border-radius: 50%;
+        background-color: nth($color, 3);
+        cursor: pointer;
+      }
+
+      .active {
+        background-color: nth($color, 1);
+      }
+    }
+  }
+}
