--- a/src/styles/pc.scss
+++ b/src/styles/pc.scss
@@ -136,3 +136,105 @@ header {
     }
   }
 }
+
+/**
+ * 关于
+ */
+#about {
+  width: 100%;
+  .about_l {
+    width: 50%;
+    height: 388px;
+    // border: 1px solid red;
+    background: {
+      image: url(../images/pc/leftbg.png);
+      // position: 0 0;
+    }
+  }
+
+  .about_r { // 自我介绍
+    width: 50%;
+    height: 388px;
+    padding: {
+      top: 30px;
+      left: 60px;
+    }
+
+    ul:first-of-type {
+      height: 388px;
+
+      li {
+        padding: {
+          top: 20px;
+          left: 80px;
+        }
+
+        height: 388px;
+
+        dl:first-of-type {
+          dt {
+            span:first-of-type {
+              font: {
+                size: 36px;
+              }
+            }
+
+            span:last-of-type {
+              font: {
+                size: 28px;
+                weight: 550;
+              }
+            }
+          }
+
+          dd {
+            padding: {
+              top: 20px;
+            }
+
+            font: {
+              size: 18px;
+            }
+
+            line-height: 40px;
+            letter-spacing: 1px;
+          }
+        }
+
+        dl:last-of-type {
+          font: {
+            size: 22px;
+          }
+
+          padding: {
+            top: 30px;
+          }
+
+          span {
+            border: {
+              width: 2px;
+              style: solid;
+            }
+            border-radius: 25px;
+            padding: 4px 30px;
+            margin: {
+              right: 25px;
+            }
+          }
+        }
+      }
+    }
+
+    ul:last-of-type {
+      top: 50%;
+      margin-top: -54px;
+      left: 20px;
+
+      li {
+        width: 16px;
+        height: 16px;
+        margin: 10px;
+      }
+    }
+  }
+}
