--- a/src/styles/phone.scss
+++ b/src/styles/phone.scss
@@ -70,7 +70,7 @@ header {
       position: absolute;
       width: 96%;
       top: 60px;
-      background: rgba(0,0,0,.8);
+      background: rgba(27, 26, 26, 0.98);
       overflow: hidden;
 
       li {
@@ -162,6 +162,109 @@ header {
           position: center;
         }
 
+      }
+    }
+  }
+}
+
+/**
+ * 关于
+ */
+#about {
+  width: 100%;
+  .about_l {
+    width: 100%;
+    height: 400px;
+    // border: 1px solid red;
+    background: {
+      image: url(../images/mobile/leftbg.png);
+      size: cover;
+      position: center;
+    }
+  }
+
+  .about_r { // 自我介绍
+    width: 100%;
+    height: 400px;
+    padding: {
+      top: 30px;
+      left: 30px;
+    }
+
+    ul:first-of-type {
+      height: 400px;
+
+      li {
+        padding: {
+          top: 10px;
+          left: 40px;
+        }
+
+        height: 388px;
+
+        dl:first-of-type {
+          dt {
+            span:first-of-type {
+              font: {
+                size: 28px;
+              }
+            }
+
+            span:last-of-type {
+              font: {
+                size: 28px;
+                weight: 550;
+              }
+            }
+          }
+
+          dd {
+            padding: {
+              top: 20px;
+            }
+
+            font: {
+              size: 18px;
+            }
+
+            line-height: 30px;
+            letter-spacing: 0;
+          }
+        }
+
+        dl:last-of-type {
+          font: {
+            size: 18px;
+          }
+
+          padding: {
+            top: 26px;
+          }
+
+          span {
+            border: {
+              width: 2px;
+              style: solid;
+            }
+            border-radius: 25px;
+            padding: 4px 20px;
+            margin: {
+              right: 25px;
+            }
+          }
+        }
+      }
+    }
+
+    ul:last-of-type {
+      top: 50%;
+      margin-top: -33px;
+      left: 6px;
+
+      li {
+        width: 10px;
+        height: 10px;
+        margin: 6px;
       }
     }
   }
