--- a/src/styles/pad.scss
+++ b/src/styles/pad.scss
@@ -236,3 +236,52 @@ header {
     }
   }
 }
+
+/**
+ * 技能
+ */
+
+#skill {
+  width: 100%;
+  padding: {
+    top: 80px;
+    bottom: 80px;
+  }
+
+  div {
+    width: 98%;
+    margin: 0 auto;
+    text-align: left;
+
+    ul:nth-of-type(2) {
+      padding-top: 60px;
+
+      li:first-of-type { // 图标
+        width: 15%;
+        padding: 0;
+      }
+
+      li:nth-of-type(2) {
+        width: 35%;
+        padding: 0;
+        padding-right: 10px;
+        // float: right;
+        // height:300px;
+
+      }
+
+      li:nth-of-type(3) { // 图标
+        width: 15%;
+        padding: 0;
+      }
+
+      li:last-of-type {
+        width: 35%;
+      }
+    }
+
+    ul:last-of-type {
+      @extend ul:nth-of-type(2);
+    }
+  }
+}
