--- a/src/styles/phone.scss
+++ b/src/styles/phone.scss
@@ -269,3 +269,52 @@ header {
     }
   }
 }
+
+/**
+ * 技能
+ */
+
+#skill {
+  width: 100%;
+  padding: {
+    top: 80px;
+    bottom: 80px;
+  }
+
+  div {
+    width: 96%;
+    margin: 0 auto;
+    text-align: center;
+
+    ul:nth-of-type(2) {
+      padding-top: 60px;
+
+      li:first-of-type { // 图标
+        width: 100%;
+        padding: 0;
+      }
+
+      li:nth-of-type(2) {
+        width: 100%;
+        padding-right: 10px;
+        // float: right;
+        // height:300px;
+        padding-top: 30px;
+
+      }
+
+      li:nth-of-type(3) { // 图标
+        width: 100%;
+        padding: 30px;
+      }
+
+      li:last-of-type {
+        width: 100%;
+      }
+    }
+
+    ul:last-of-type {
+      @extend ul:nth-of-type(2);
+    }
+  }
+}
