--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -64,17 +64,18 @@ $font:16px; // html设置字体大小
  * box-size
  */
 @mixin box($size:border-box) {
-  box-sizing:border-box;
-  -moz-box-sizing:border-box;
   -webkit-box-sizing:border-box;
+  -moz-box-sizing:border-box;
+  box-sizing:border-box;
 }
 
 html,body {
   font-size: $font;
   width: 100%;
   height: 100%;
+  position: relative;
+  // position: fixed;
 }
-
 
 /**
  * 引入字体图标
@@ -102,10 +103,10 @@ html,body {
  * 测试部分
  */
 
-#works, #project, #contact{
+#project, #contact{
   width: 100%;
   height: 900px;
-  background-color: nth($color,3);
+  background-color: nth($color,2);
 }
 
 /**
@@ -114,9 +115,17 @@ html,body {
 header {
   width: 100%;
   background-color:   rgba(23, 23, 23, 0);
+  // background-color: rgb(23, 23, 23);
   position: fixed;
-  z-index: 100000000;
-
+  top: 0;
+  z-index: 100;
+  #header-span {
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(23, 23, 23, 0);
+    // display: none;
+  }
   nav {
     // width: 90%;
     // border: 1px solid red;
@@ -405,7 +414,7 @@ header {
   bottom: 20px;
   right: 20px;
   display: none;
-  z-index: 1000;
+  z-index: 9;
 }
 
 .icon_top:hover {
@@ -1094,4 +1103,267 @@ header {
     }
   }
  }
+}
+
+/**
+ * 作品
+ */
+
+#works {
+
+  width: 100%;
+  background-color: nth($color, 6);
+  padding: {
+    top: 80px;
+    bottom: 80px;
+  }
+
+  // 标题
+  .title2 {
+    color: nth($color, 2);
+
+    li:nth-of-type(1) {
+      background-color: nth($color, 1);
+      font: {
+        size: 20px;
+      }
+      letter-spacing: 1px;
+      line-height: 38px;
+      position: relative;
+      text-align: center;
+      width: 160px;
+      height: 40px;
+      margin: 0 auto;
+      @include shadow();
+    }
+
+    li:nth-of-type(1)::after {
+      content: "";
+      position: absolute;
+
+      border: {
+        width: 14px 11px 0 12px;
+        color: nth($color, 1) transparent transparent transparent;
+        style: solid;
+      }
+      bottom: -9px;
+      left: 12px;
+    }
+
+    li:nth-of-type(2) {
+      font: {
+        size: 28px;
+      }
+
+      width: 170px;
+      margin: 0 auto;
+      padding: {
+        top: 8px;
+        bottom: 24px;
+      }
+
+      span {
+        display: inline-block;
+        letter-spacing: 4px;
+        color: nth($color, 3);
+      }
+
+      span:first-of-type {
+        padding-left: 10px;
+      }
+
+      span:last-of-type {
+        font: {
+          weight: 700;
+          size: 30px;
+        }
+
+        padding-left: 20px;
+      }
+    }
+    li:last-of-type {
+      width: 200px;
+      height: 1px;
+      background-color: nth($xcolor, 1);
+      margin: 0 auto;
+      position: relative;
+    }
+
+    li:last-of-type::after {
+      content: "";
+      position: absolute;
+      width: 80px;
+      height: 6px;
+      background-color: nth($color, 1);
+      left: 58px;
+      top: -3px;
+      display: inline-block;
+    }
+  }
+  // *******************
+
+  ul:nth-of-type(2) {
+    width: 100%;
+
+    // 切换按钮
+    li {
+      margin: 0 auto;
+      padding: {
+        top: 40px;
+        bottom: 40px;
+      }
+
+      text-align: center;
+      span {
+        display: inline-block;
+        float: left;
+        color: nth($color, 3);
+        cursor: pointer;
+        /* font: {
+          size: 18px;
+          weight: 550;
+        } */
+        @include box();
+        border: 2px solid nth($color, 1);
+        /* padding: {
+          top: 6px;
+          right: 14px;
+          bottom: 6px;
+          left: 14px;
+        } */
+      }
+
+      /* span:nth-of-type(2) {
+        margin: 0 6px;
+      }
+      span:last-of-type {
+        margin-left: 6px;
+      } */
+      span:hover {
+        background-color: nth($color, 1);
+        color: nth($color, 2);
+      }
+      .current_all {
+        background-color: nth($color, 1);
+        color: nth($color, 2);
+      }
+    }
+    // *****************************
+  }
+
+  .show_works {
+    background-color: nth($color, 3);
+    width: 100%;
+
+    ul {
+      width: 100%;
+      display: none;
+      background-color: nth($color, 3);
+      @include box();
+      padding: 5px;
+
+      li {
+        @include box();
+        padding: 5px;
+        float: left;
+        background: {
+          size: cover;
+          position: center;
+          repeat: no-repeat;
+          origin: content-box;
+        }
+        background-color: nth($color, 3);
+        cursor: pointer;
+        position: relative;
+        overflow: hidden;
+      }
+
+      li::after {
+        display: inline-block;
+        content: "";
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, .5);
+        position: absolute;
+        left: 0;
+        right: 0;
+        display: none;
+      }
+      li:hover:after {
+        display: block;
+      }
+    }
+
+    .ulblock {
+      display: block;
+    }
+  }
+
+  .show_img {
+    display: none;
+    position: fixed;
+    z-index: 900;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, .8);
+    // background-color: red;
+
+    dl {
+      background-color: rgba(0, 0, 0, .8);
+      position: absolute;
+      z-index: 6;
+
+      dt {
+        width: 100%;
+        text-align: center;
+        color: nth($color, 2);
+
+        position: absolute;
+        z-index: 6;
+      }
+
+      dd {
+        width: 100%;
+        height: 100%;
+        background: {
+          size: cover;
+          position: center;
+          repeat: no-repeat;
+        }
+      }
+    }
+  }
+
+  .show_img .span_img {
+    position: fixed;
+    z-index: 6;
+    width: 40px;
+    height: 40px;
+    // border: 1px solid nth($color, 2);
+    cursor: pointer;
+  }
+  .show_img .span_img::after, .show_img .span_img::before{
+    content: "";
+    display: inline-block;
+    width: 40px;
+    height: 1px;
+    background-color: nth($color, 2);
+    border-radius: 1px;
+    position: fixed;
+  }
+  .show_img .span_img::before {
+    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+  }
+  .show_img .span_img::after {
+    transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
+  }
+  .show_img .span_img:hover:after, .span_img:hover:before {
+    background-color: nth($xcolor, 3);
+  }
 }
