--- a/src/styles/pad.scss
+++ b/src/styles/pad.scss
@@ -375,3 +375,59 @@ header {
   }
  }
 }
+
+/**
+ * 作品
+ */
+
+#works {
+
+  ul:nth-of-type(2) {
+    width: 100%;
+
+    // 切换按钮
+    li {
+      width: 452px;
+    }
+  }
+
+  .show_works {
+
+    ul {
+
+      li {
+        width: 33.3333333%;
+        height: 286px;
+      }
+    }
+  }
+
+  .show_img {
+
+    dl {
+      width: 600px;
+      height: 420px;
+      left: 50%;
+      margin-left: -300px;
+      top: 50%;
+      margin-top: -220px;
+
+      dt {
+        font: {
+          size: 30px;
+        }
+
+        top: -70px;
+      }
+    }
+  }
+
+  .show_img .span_img {
+    right: 20px;
+    top: 20px;
+  }
+  .show_img .span_img::after, .show_img .span_img::before{
+    top: 38px;
+    right: 13px;
+  }
+}
