--- a/src/styles/phone.scss
+++ b/src/styles/phone.scss
@@ -400,3 +400,92 @@ header {
   }
  }
 }
+
+/**
+ * 作品
+ */
+
+#works {
+
+  ul:nth-of-type(2) {
+    width: 100%;
+
+    // 切换按钮
+    li {
+      width: 100%;
+      /* padding: {
+        top: 40px;
+        left: 4px;
+        right: 4px;
+      } */
+
+      span {
+        // margin: 10px 10px;
+        font: {
+          size: 16px;
+          weight: 550;
+        }
+        margin-left: 1%;
+        line-height: 40px;
+        // background-color: red;
+      }
+
+      span:first-of-type {
+        width: 11.875%;
+      }
+      span:nth-of-type(2) {
+        width: 23.75%;
+      }
+      span:nth-of-type(3) {
+        width: 35.625%;
+      }
+      span:last-of-type {
+        width: 23.75%;
+      }
+    }
+  }
+
+  .show_works {
+
+    ul {
+
+      li {
+        width: 100%;
+        height: 306px;
+
+        span:first-of-type, span:last-of-type {
+          margin-left: 20px;
+        }
+      }
+    }
+  }
+
+  .show_img {
+
+    dl {
+      width: 320px;
+      height: 240px;
+      left: 50%;
+      margin-left: -161px;
+      top: 50%;
+      margin-top: -130px;
+
+      dt {
+        font: {
+          size: 24px;
+        }
+
+        top: -70px;
+      }
+    }
+  }
+
+  .show_img .span_img {
+    right: 20px;
+    top: 20px;
+  }
+  .show_img .span_img::after, .show_img .span_img::before{
+    top: 38px;
+    right: 13px;
+  }
+}
