--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -99,15 +99,6 @@ html,body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-/**
- * 测试部分
- */
-
-#project, #contact{
-  width: 100%;
-  height: 900px;
-  background-color: nth($color,2);
-}
 
 /**
  * 导航栏
@@ -1365,5 +1356,151 @@ header {
   }
   .show_img .span_img:hover:after, .span_img:hover:before {
     background-color: nth($xcolor, 3);
+  }
+}
+
+/**
+ * 项目介绍
+ */
+
+#project {
+
+  background-color: nth($color, 2);
+
+  div:first-of-type {
+    margin: 0 auto;
+
+      // 类别标题 *********************************************************************************
+    .title3 {
+      color: nth($color, 2);
+
+      li:nth-of-type(1) {
+        background-color: nth($color, 1);
+        font: {
+          size: 20px;
+        }
+        letter-spacing: 1px;
+        line-height: 38px;
+        position: relative;
+        text-align: center;
+
+        width: 160px;
+        height: 40px;
+        margin: 0 auto;
+        @include shadow();
+      }
+
+      li:nth-of-type(1)::after {
+        content: "";
+        position: absolute;
+
+        border: {
+          width: 14px 11px 0 12px;
+          color: nth($color, 1) transparent transparent transparent;
+          style: solid;
+        }
+        bottom: -9px;
+        left: 12px;
+      }
+
+      li:nth-of-type(2) {
+        font: {
+          size: 28px;
+        }
+
+        width: 170px;
+        margin: 0 auto;
+        padding: {
+          top: 8px;
+          bottom: 24px;
+        }
+
+        // border: 1px solid red;
+
+        span {
+          display: inline-block;
+          letter-spacing: 4px;
+          color: nth($color, 3);
+        }
+
+        span:first-of-type {
+          padding-left: 10px;
+        }
+
+        span:last-of-type {
+          font: {
+            weight: 700;
+            size: 30px;
+          }
+
+          padding-left: 20px;
+        }
+      }
+
+      li:last-of-type {
+        width: 200px;
+        height: 1px;
+        background-color: nth($xcolor, 1);
+        margin: 0 auto;
+        position: relative;
+      }
+
+      li:last-of-type::after {
+        content: "";
+        position: absolute;
+        width: 80px;
+        height: 6px;
+        background-color: nth($color, 1);
+        left: 58px;
+        top: -3px;
+        display: inline-block;
+      }
+    }
+    //*******************************************************************************************
+
+    .project_big {
+      margin: 0 auto;
+
+        ul {
+          width: 100%;
+          margin: {
+            top: 40px;
+          }
+          li {
+            float: left;
+            background-color: nth($color, 6);
+          }
+
+          .project_img {
+            background: {
+              size: cover;
+              position: center;
+              repeat: no-repeat;
+            }
+          }
+
+          .project_msg {
+            dl {
+              width: 100%;
+              @include box();
+
+              dt {
+                color: nth($color, 1);
+              }
+
+              dd {
+                text-indent:2em;
+                color: #777;
+                line-height: 24px;
+                letter-spacing: 1px;
+              }
+            }
+          }
+        }
+
+        ul:hover {
+          @include shadow();
+        }
+    }
   }
 }
