--- a/src/styles/pad.scss
+++ b/src/styles/pad.scss
@@ -431,3 +431,54 @@ header {
     right: 13px;
   }
 }
+
+/**
+ * 项目介绍
+ */
+#project {
+  padding: {
+    top: 80px;
+    bottom: 80px;
+  }
+
+  div:first-of-type {
+    width: 768px;
+
+    .project_big {
+      width: 768px;
+
+      ul {
+        width: 100%;
+        li {
+          // height: 370px;
+          width: 100%;
+        }
+
+        .project_img {
+          width: 100%;
+          height: 370px;
+        }
+
+        .project_msg {
+          dl {
+            height: 250px;
+            padding: {
+              left: 40px;
+              top: 40px;
+              right: 40px;
+            }
+            dt {
+            font: {
+              size: 22px;
+              weight: 550;
+            }
+
+            letter-spacing: 2px;
+            padding-bottom: 20px;
+            }
+          }
+        }
+      }
+    }
+  }
+}
